--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://betteranex.com/",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export",
+    "predeploy": "npm run export",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -29,6 +33,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "postcss-nesting": "^13.0.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "gh-pages": "^6.3.0"
   }
 }
