--- a/package.json
+++ b/package.json
@@ -5,33 +5,34 @@
   "homepage": "https://betteranex.com/",
   "scripts": {
     "dev": "next dev",
+    "lint": "next lint",
     "build": "next build",
     "predeploy": "npm run build && npm run export",
     "deploy": "gh-pages -d out"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.8.1",
-    "next": "15.2.0",
-    "postcss": "^8.5.3",
-    "postcss-import": "^16.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.9"
+    "@headlessui/react": "^1.7.18",
+    "@vercel/analytics": "^1.1.2",
+    "@vercel/speed-insights": "^1.0.9",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "next": "14.1.0",
+    "postcss": "^8.4.35",
+    "postcss-import": "^16.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.9",
-    "@types/next": "^8.0.7",
-    "@types/node": "^20.17.19",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.0",
-    "gh-pages": "^6.3.0",
-    "postcss-nesting": "^13.0.1",
-    "typescript": "^5"
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "gh-pages": "^6.1.1",
+    "postcss-nesting": "^12.0.2",
+    "typescript": "^5.3.3"
   }
 }
